// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThreadList matches the last snapshot 1`] = `
<div
  data-stylename="thread-list"
>
  <div
    data-stylename="header"
  >
    <div
      data-stylename="search"
    >
      <div
        data-stylename="search-icon"
      >
        <Icon
          name="Search"
        />
      </div>
      <TextInput
        noClearButton={true}
        onChange={[Function]}
        placeholder="Search for people..."
      />
    </div>
    <Link
      data-stylename="new-message"
      to="/messages/new"
    >
      <span>
        New
      </span>
      <Icon
        data-stylename="messages-icon"
        name="Messages"
      />
    </Link>
  </div>
  <ul
    data-stylename="list"
    id="thread-list-list"
  >
    <div
      data-stylename="no-conversations"
    >
      You have no active messages
    </div>
  </ul>
  <ScrollListener
    elementId="thread-list-list"
  />
</div>
`;

exports[`ThreadListItem matches the last snapshot 1`] = `
<li
  data-stylename="list-item"
>
  <Link
    to="/messages/undefined"
  >
    <ThreadAvatars
      avatarUrls={
        Array [
          "jo.png",
          "la.png",
        ]
      }
    />
    <div
      data-stylename="li-center-content"
    >
      <ThreadNames
        names="Jo and La"
      />
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "",
          }
        }
        data-stylename="thread-message-text"
      />
    </div>
    <div
      data-stylename="li-right-content"
    >
      <div
        data-stylename="message-time"
      />
    </div>
  </Link>
</li>
`;

exports[`ThreadListItem matches the last snapshot with 2 participants 1`] = `
<li
  data-stylename="list-item"
>
  <Link
    to="/messages/undefined"
  >
    <ThreadAvatars
      avatarUrls={
        Array [
          "jo.png",
        ]
      }
    />
    <div
      data-stylename="li-center-content"
    >
      <ThreadNames
        names="Jo"
      />
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "",
          }
        }
        data-stylename="thread-message-text"
      />
    </div>
    <div
      data-stylename="li-right-content"
    >
      <div
        data-stylename="message-time"
      />
    </div>
  </Link>
</li>
`;

exports[`ThreadListItem matches the last snapshot with just you 1`] = `
<li
  data-stylename="list-item"
>
  <Link
    to="/messages/undefined"
  >
    <ThreadAvatars
      avatarUrls={
        Array [
          "ra.png",
        ]
      }
    />
    <div
      data-stylename="li-center-content"
    >
      <ThreadNames
        names="You"
      />
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "",
          }
        }
        data-stylename="thread-message-text"
      />
    </div>
    <div
      data-stylename="li-right-content"
    >
      <div
        data-stylename="message-time"
      />
    </div>
  </Link>
</li>
`;
